# lexiq

./: Cargo.toml
crates/lexiq-lang-rust/: Cargo.toml
crates/lexiq-lang-rust/src/: lib.rs
examples/: rust.rs  test_rust.rs
resources/syntaxes/: rust.yaml
src/: grammar.rs  lib.rs  parse.rs
src/grammars/: rust.rs
