[package]
name = "lexiq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { package = "fancy-regex", git = "https://github.com/fancy-regex/fancy-regex" }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
